Move to a position:absolute design to fix photo gallery link and improve IE rendering.
Signed-off-by: Jason Carter <carter.jk@gmail.com>

--- a/CarterJK.csproj
+++ b/CarterJK.csproj
@@ -157,6 +157,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="Content\home.css" />
+    <Content Include="Content\home.min.css">
+      <DependentUpon>home.css</DependentUpon>
+    </Content>
     <Content Include="Content\main.min.css">
       <DependentUpon>main.css</DependentUpon>
     </Content>
