--- a/packages.config
+++ b/packages.config
@@ -23,5 +23,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="RequireJS" version="2.1.9" targetFramework="net45" />
+  <package id="Respond" version="1.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
