Turn on full site https and HTTP strict transport security.

--- a/Web.config
+++ b/Web.config
@@ -41,6 +41,23 @@
         <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
              type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       </handlers>
+      <httpProtocol>
+          <customHeaders>
+              <add name="Strict-Transport-Security" value="max-age=31536000"/>
+          </customHeaders>
+      </httpProtocol>
+      <rewrite>
+        <rules>
+          <rule name="Redirect to https">
+            <match url="(.*)"/>
+            <conditions>
+              <add input="{HTTPS}" pattern="Off"/>
+              <add input="{REQUEST_METHOD}" pattern="^get$|^head$" />
+            </conditions>
+            <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+          </rule>
+        </rules>
+      </rewrite>
     </system.webServer>
   </location>
   <runtime>
